# monkey-interpreter

./: .gitignore  CHANGELOG.md  flake.nix  monkey.cabal  test.txt
app/: Main.hs
src/: Monkey.hs
src/Monkey/: AST.hs  Desugar.hs  Eval.hs  Parser.hs  PrettyPrinter.hs
