cabal-version:      2.4
name:               monkey
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             oldmate
maintainer:         spider@tilde.cafe

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common base
    default-language: Haskell2010
    build-depends:    base ^>=4.16.1.0, text, megaparsec, parser-combinators, containers, transformers, hashable, unordered-containers, vector, prettyprinter, prettyprinter-ansi-terminal

library
    import:           base
    hs-source-dirs:   src
    exposed-modules:
        Monkey
        Monkey.AST
        Monkey.Parser
        Monkey.Desugar
        Monkey.Eval
        Monkey.PrettyPrinter
    ghc-options:        -Wall -Werror=incomplete-patterns


executable monkey-haskell
    import:           base
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    raw-strings-qq, monkey
    hs-source-dirs:   app
    autogen-modules:  Paths_monkey
    other-modules:    Paths_monkey

